<resources>
    <string name="app_name">AndroidChatApp</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="register_link"></string>
    <string name="register_text">Register</string>
    <string name="register_username">register_username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_password">Password</string>
    <string name="sign_up">sign_up</string>
</resources>